--- a/frontend/src/pages/Onramper/index.css
+++ b/frontend/src/pages/Onramper/index.css
@@ -1,6 +1,15 @@
-.onramper-container {
+.demo-container {
    margin: 1rem;
-   display: flex;
-   justify-content: center;
-   align-items: center;
+}
+.demo-title {
+   margin: 2rem auto;
+   text-align: center;
+   font-size: 3rem;
+   color: #4a4d53;
+   font-family: Inter,sans-serif;
+}
+.demo-logo {
+   width: 200px;
+   margin: 2rem auto;
+   display: block;
 }
